--- a/src/components/MessageBox.module.css
+++ b/src/components/MessageBox.module.css
@@ -1,10 +1,17 @@
 .ul {
   margin: 0;
-  padding: 0 2em;
+  padding: 0 2em 1em;
   height: 50vh;
   border: 1px solid #888;
   background-color: #363636;
+  overflow: scroll;
   list-style: none;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.ul::-webkit-scrollbar {
+  display: none;
 }
 
 .li {
@@ -13,6 +20,10 @@
 }
 
 .li:last-child {
+  padding-bottom: 1em;
+}
+
+.messagesEnd {
   padding-bottom: 1em;
 }
 
